[package]
name = "ds-free-api"
version = "0.2.6"
license = "GPL-3.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.8"
base64 = "0.22.1"
bcrypt = "0.19"
bytes = "1"
chrono = "0.4.44"
dashmap = "6"
env_logger = { version = "0.11.10", features = ["auto-color"] }
futures = "0.3.32"
hmac = "0.13.0"
log = "0.4.29"
mime_guess = "2.0.5"
pin-project-lite = "0.2.17"
rand = "0.10.0"
rquest = { version = "5.1.0", default-features = false, features = ["json", "stream", "multipart", "socks"] }
rquest-util = "2.2.1"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tiktoken-rs = "0.11.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.2"
tower-http = { version = "0.6", features = ["fs", "cors"] }
wasmtime = { version = "44.0.0", features = ["cranelift"] }
redis = { version = "1.2.1", features = ["uuid"] }

